// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots shareables/Footer/Settings/ToolbarSettings component: off 1`] = `
<div
  className="kbnCanvas"
  style={
    Object {
      "background": "#fff",
      "border": "1px solid #ccc",
      "height": 124,
      "overflow": "hidden",
      "padding": 16,
      "position": "relative",
      "width": 256,
    }
  }
>
  <div
    style={
      Object {
        "padding": 16,
      }
    }
  >
    <div
      className="euiFormRow"
      id="generated-id-row"
    >
      <div
        className="euiFormRow__fieldWrapper"
      >
        <div
          className="euiSwitch"
        >
          <button
            aria-checked={false}
            aria-describedby="generated-id-help-0"
            aria-labelledby="generated-id"
            className="euiSwitch__button"
            data-test-subj="hideToolbarSwitch"
            id="generated-id"
            name="toolbarHide"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            role="switch"
            type="button"
          >
            <span
              className="euiSwitch__body"
            >
              <span
                className="euiSwitch__thumb"
              />
              <span
                className="euiSwitch__track"
              >
                <span
                  className="euiSwitch__icon"
                  data-euiicon-type="cross"
                  size="m"
                />
                <span
                  className="euiSwitch__icon euiSwitch__icon--checked"
                  data-euiicon-type="check"
                  size="m"
                />
              </span>
            </span>
          </button>
          <span
            className="euiSwitch__label"
            id="generated-id"
            onClick={[Function]}
          >
            Hide Toolbar
          </span>
        </div>
        <div
          className="euiFormHelpText euiFormRow__text"
          id="generated-id-help-0"
        >
          Hide the toolbar when the mouse is not within the Canvas?
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots shareables/Footer/Settings/ToolbarSettings component: on 1`] = `
<div
  className="kbnCanvas"
  style={
    Object {
      "background": "#fff",
      "border": "1px solid #ccc",
      "height": 124,
      "overflow": "hidden",
      "padding": 16,
      "position": "relative",
      "width": 256,
    }
  }
>
  <div
    style={
      Object {
        "padding": 16,
      }
    }
  >
    <div
      className="euiFormRow"
      id="generated-id-row"
    >
      <div
        className="euiFormRow__fieldWrapper"
      >
        <div
          className="euiSwitch"
        >
          <button
            aria-checked={true}
            aria-describedby="generated-id-help-0"
            aria-labelledby="generated-id"
            className="euiSwitch__button"
            data-test-subj="hideToolbarSwitch"
            id="generated-id"
            name="toolbarHide"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            role="switch"
            type="button"
          >
            <span
              className="euiSwitch__body"
            >
              <span
                className="euiSwitch__thumb"
              />
              <span
                className="euiSwitch__track"
              >
                <span
                  className="euiSwitch__icon"
                  data-euiicon-type="cross"
                  size="m"
                />
                <span
                  className="euiSwitch__icon euiSwitch__icon--checked"
                  data-euiicon-type="check"
                  size="m"
                />
              </span>
            </span>
          </button>
          <span
            className="euiSwitch__label"
            id="generated-id"
            onClick={[Function]}
          >
            Hide Toolbar
          </span>
        </div>
        <div
          className="euiFormHelpText euiFormRow__text"
          id="generated-id-help-0"
        >
          Hide the toolbar when the mouse is not within the Canvas?
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots shareables/Footer/Settings/ToolbarSettings contextual 1`] = `
<div
  className="kbnCanvas"
  style={
    Object {
      "background": "#fff",
      "border": "1px solid #ccc",
      "height": 124,
      "overflow": "hidden",
      "padding": 16,
      "position": "relative",
      "width": 256,
    }
  }
>
  <div
    style={
      Object {
        "padding": 16,
      }
    }
  >
    <div
      className="euiFormRow"
      id="generated-id-row"
    >
      <div
        className="euiFormRow__fieldWrapper"
      >
        <div
          className="euiSwitch"
        >
          <button
            aria-checked={false}
            aria-describedby="generated-id-help-0"
            aria-labelledby="generated-id"
            className="euiSwitch__button"
            data-test-subj="hideToolbarSwitch"
            id="generated-id"
            name="toolbarHide"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            role="switch"
            type="button"
          >
            <span
              className="euiSwitch__body"
            >
              <span
                className="euiSwitch__thumb"
              />
              <span
                className="euiSwitch__track"
              >
                <span
                  className="euiSwitch__icon"
                  data-euiicon-type="cross"
                  size="m"
                />
                <span
                  className="euiSwitch__icon euiSwitch__icon--checked"
                  data-euiicon-type="check"
                  size="m"
                />
              </span>
            </span>
          </button>
          <span
            className="euiSwitch__label"
            id="generated-id"
            onClick={[Function]}
          >
            Hide Toolbar
          </span>
        </div>
        <div
          className="euiFormHelpText euiFormRow__text"
          id="generated-id-help-0"
        >
          Hide the toolbar when the mouse is not within the Canvas?
        </div>
      </div>
    </div>
  </div>
</div>
`;
